# pet-projects-and-practice

./: README.md
clang-cpp-pract/: main.cpp
go-pract/: arrays_slices.go  slice.go  types.go
go-pract/arraySlices/: main.go
go-pract/channels/: main.go
go-pract/go-vue/: webServer.go
go-pract/gorutine/: main.go
go-pract/http-golang-server-tests/: main.go  main_test.go
go-pract/interfaces/: main.go
go-pract/iocmderrors/: main.go
go-pract/polimorfizmistd/: main.go
go-pract/study/: main.go
go-pract/trycontext/: main.go
go/arraySlices/: slice.go
go/data_structures/: bintree.go  hashmap.go
go/find_ipv4/: findIPv4.go
go/go-vue/: localDB.go  user.go
go/interfaces/: main.go
go/iocmderrors/: main.go
go/os_env/: main.go
go/parseXML/: main.go
go/reminder/: main.go
go/study/: main.go
go/types/: main.go
js/: Coding3minJumpingDutchAct.js  js-pract.js  promise.js  ts-pract.ts
js-pract/: Coding3minJumpingDutchAct.js  js-pract.js  promise.js  ts-pract.ts
js/backend-crash/: Post.js  PostController.js  PostService.js  README.md  fileService.js  index.js  package-lock.json  package.json
python-pract/: drawing.py  fib.py
python/async_csc_py/: rockets.py  rockets_2.py  serv.py
python/async_py/: main.py
python/leetcode/: bin_search.py  bubble_sort.py  decorates.py  dijkstra.py  fib_bottom_up.py  fib_py.py  first_bad_ver.py  intersection_2_arr.py  is_bin_matrix_eq.py  lru_cache.py  max_profit.py  merge_sort.py  (+6 more)
rust-pract/: Cargo.toml  main.rs
rust/opengl_rust/getting-started/: Cargo.toml
rust/opengl_rust/getting-started/src/: main.rs
(+85 files in other folders)
